; ModuleID = '/home/carl/AnghaBench/h2o/t/00unit/lib/common/extr_socket.c_test_sliding_counter.c'
source_filename = "/home/carl/AnghaBench/h2o/t/00unit/lib/common/extr_socket.c_test_sliding_counter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_sliding_counter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_sliding_counter() #0 {
  %1 = alloca %struct.TYPE_4__, align 4
  %2 = alloca i64, align 8
  %3 = bitcast %struct.TYPE_4__* %1 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %3, i8 0, i64 8, i1 false)
  %4 = call i32 @h2o_sliding_counter_start(%struct.TYPE_4__* %1, i32 100)
  %5 = call i32 @h2o_sliding_counter_stop(%struct.TYPE_4__* %1, i32 180)
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp eq i32 %7, 10
  %9 = zext i1 %8 to i32
  %10 = call i32 @ok(i32 %9)
  store i64 0, i64* %2, align 8
  br label %11

11:                                               ; preds = %17, %0
  %12 = load i64, i64* %2, align 8
  %13 = icmp ne i64 %12, 7
  br i1 %13, label %14, label %20

14:                                               ; preds = %11
  %15 = call i32 @h2o_sliding_counter_start(%struct.TYPE_4__* %1, i32 1)
  %16 = call i32 @h2o_sliding_counter_stop(%struct.TYPE_4__* %1, i32 81)
  br label %17

17:                                               ; preds = %14
  %18 = load i64, i64* %2, align 8
  %19 = add i64 %18, 1
  store i64 %19, i64* %2, align 8
  br label %11

20:                                               ; preds = %11
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = icmp eq i32 %22, 80
  %24 = zext i1 %23 to i32
  %25 = call i32 @ok(i32 %24)
  %26 = call i32 @h2o_sliding_counter_start(%struct.TYPE_4__* %1, i32 1000)
  %27 = call i32 @h2o_sliding_counter_stop(%struct.TYPE_4__* %1, i32 8440)
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = icmp eq i32 %29, 1000
  %31 = zext i1 %30 to i32
  %32 = call i32 @ok(i32 %31)
  store i64 0, i64* %2, align 8
  br label %33

33:                                               ; preds = %39, %20
  %34 = load i64, i64* %2, align 8
  %35 = icmp ne i64 %34, 8
  br i1 %35, label %36, label %42

36:                                               ; preds = %33
  %37 = call i32 @h2o_sliding_counter_start(%struct.TYPE_4__* %1, i32 1)
  %38 = call i32 @h2o_sliding_counter_stop(%struct.TYPE_4__* %1, i32 11)
  br label %39

39:                                               ; preds = %36
  %40 = load i64, i64* %2, align 8
  %41 = add i64 %40, 1
  store i64 %41, i64* %2, align 8
  br label %33

42:                                               ; preds = %33
  %43 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = icmp eq i32 %44, 10
  %46 = zext i1 %45 to i32
  %47 = call i32 @ok(i32 %46)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @h2o_sliding_counter_start(%struct.TYPE_4__*, i32) #2

declare dso_local i32 @h2o_sliding_counter_stop(%struct.TYPE_4__*, i32) #2

declare dso_local i32 @ok(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
